objects/Billing_Run__c/Billing_Run__c.object-meta.xml
<CustomObject>
    <description>Contains information for ICMS and Phoenix billing process.  One record per bill run.</description>
    <label>Billing Run</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>