objects/Billing_Run__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing_System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>ICMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>