objects/Billing_Run__c/fields/Expected_PDF_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_PDF_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>the expected total number of invoices/pdfs.  This value will be compared to the Actual_PDF_Count to ensure they are the same.</description>
    <inlineHelpText>the expected total number of invoices/pdfs.  This value will be compared to the Actual_PDF_Count to ensure they are the same.</inlineHelpText>
    <label>Expected_PDF_Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>