objects/Billing_Run__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>The invoice date</description>
    <inlineHelpText>enter the date for this bill/invoice run</inlineHelpText>
    <label>Invoice_Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>