objects/Billing_Run__c/fields/LogFileName_s3_Key__c.field-meta.xml
<CustomField>
    <fullName>LogFileName_s3_Key__c</fullName>
    <label>LogFileName_s3_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>