objects/Billing_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Ready&quot;</defaultValue>
    <description>Provides the various statuses for the billing/invoice creation process</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>