objects/Billing_Run__c/fields/ZipFileName__c.field-meta.xml
<CustomField>
    <fullName>ZipFileName__c</fullName>
    <description>this field is used to uniquely identify a record when the invoice date is unknown</description>
    <label>ZipFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>